Fix Tab default active index & slider collage alignment & small bugs

--- a/packages/page-builder/src/style/content-type/slider/_default.scss
+++ b/packages/page-builder/src/style/content-type/slider/_default.scss
@@ -1,6 +1,5 @@
 .CmsPage {
     div[data-content-type='slider'] {
-        visibility: hidden;
 
         &.slick-initialized {
             visibility: visible;
